--- a/src/app/components/production/create-program/create-program.component.html
+++ b/src/app/components/production/create-program/create-program.component.html
@@ -1,5 +1,5 @@
 <section class="container">
-  <h1 class="header letter-spacing-1">Program Creation</h1>
+  <h1 class="header letter-spacing-1">Conversion Program Creation</h1>
   <mat-card class="card">
     <mat-card-header>
       <mat-card-title>Program Details</mat-card-title>
@@ -9,9 +9,9 @@
         <div class="form-first-row">
           <mat-form-field appearance="fill" class="w-50">
             <mat-label>Shade</mat-label>
-            <mat-select formControlName="shadeNo">
-              <ng-container *ngFor="let shade of shadeList | async">
-                <mat-option [value]="shade.shadeId">{{
+            <mat-select formControlName="shadeName">
+              <ng-container *ngFor="let shade of shadeList">
+                <mat-option [value]="shade.shadeName">{{
                   shade.shadeName
                 }}</mat-option>
               </ng-container>
@@ -20,13 +20,16 @@
           </mat-form-field>
 
           <mat-form-field appearance="fill" class="w-50">
-            <mat-label>Prog Date</mat-label>
+            <mat-label>Program Date</mat-label>
             <input
               matInput
               [matDatepicker]="picker"
-              formControlName="progDate"
+              formControlName="programDate"
               (dateChange)="
-                appSharedService.formatDate($event, form.controls['pOdate'])
+                appSharedService.formatDate(
+                  $event,
+                  form.controls['programDate']
+                )
               "
             />
             <mat-hint>DD/MM/YYYY</mat-hint>
@@ -40,9 +43,9 @@
 
           <mat-form-field appearance="fill" class="w-50">
             <mat-label>Blend</mat-label>
-            <mat-select formControlName="blend">
-              <ng-container *ngFor="let blend of blendList | async">
-                <mat-option [value]="blend.blendId">{{
+            <mat-select formControlName="blendName">
+              <ng-container *ngFor="let blend of blendList">
+                <mat-option [value]="blend.blendName">{{
                   blend.blendName
                 }}</mat-option>
               </ng-container>
@@ -69,17 +72,17 @@
   <div class="footer-container">
     <div class="w-50">
       <table mat-table [dataSource]="dataSource" class="mat-elevation-z8">
-        <ng-container matColumnDef="yarnCount">
+        <ng-container matColumnDef="counts">
           <th mat-header-cell *matHeaderCellDef>Yarn Count</th>
           <td mat-cell *matCellDef="let element">
-            {{ getCounts(element.yarnCount) }}
+            {{ element.counts }}
           </td>
           <td mat-footer-cell *matFooterCellDef></td>
         </ng-container>
 
-        <ng-container matColumnDef="kgs">
+        <ng-container matColumnDef="quantity">
           <th mat-header-cell *matHeaderCellDef>KGs</th>
-          <td mat-cell *matCellDef="let element">{{ element.kgs }}</td>
+          <td mat-cell *matCellDef="let element">{{ element.quantity }}</td>
           <td mat-footer-cell *matFooterCellDef>{{ getTotalKgs() }}</td>
         </ng-container>
 
