--- a/src/app/components/production/mixing/choose-program/choose-program.component.scss
+++ b/src/app/components/production/mixing/choose-program/choose-program.component.scss
@@ -13,6 +13,24 @@
   margin-bottom: 24px;
 }
 
+.table-container {
+  position: relative;
+}
+
+.loader {
+  width: 100%;
+  height: 100%;
+  z-index: 10;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  background: rgba(0, 0, 0, 0.1);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
 .row {
   cursor: pointer;
 
