--- a/src/app/components/production/mixing/fibre-stock/fibre-stock.component.html
+++ b/src/app/components/production/mixing/fibre-stock/fibre-stock.component.html
@@ -1,50 +1,84 @@
 <h1 mat-dialog-title>Select Fibre Stock</h1>
 <div mat-dialog-content class="form-container">
-  <table mat-table [dataSource]="dataSource" class="table">
-    <!-- receivedDCNo Column -->
-    <ng-container matColumnDef="receivedDCNo">
-      <th mat-header-cell *matHeaderCellDef>Received DC No</th>
-      <td mat-cell *matCellDef="let element">{{ element.receivedDCNo }}</td>
-    </ng-container>
+  <div class="table-container">
+    <div *ngIf="loader" class="loader">
+      <mat-spinner></mat-spinner>
+    </div>
+    <table mat-table [dataSource]="dataSource" class="table">
+      <!-- receivedDCNo Column -->
+      <ng-container matColumnDef="receivedDCNo">
+        <th mat-header-cell *matHeaderCellDef>Received DC No</th>
+        <td mat-cell *matCellDef="let element">{{ element.receivedDCNo }}</td>
+      </ng-container>
 
-    <!-- fibreCategory Column -->
-    <ng-container matColumnDef="fibreCategory">
-      <th mat-header-cell *matHeaderCellDef>Fibre Category</th>
-      <td mat-cell *matCellDef="let element">{{ element.fibreCategory }}</td>
-    </ng-container>
+      <!-- fibreCategory Column -->
+      <ng-container matColumnDef="fibreCategory">
+        <th mat-header-cell *matHeaderCellDef>Fibre Category</th>
+        <td mat-cell *matCellDef="let element">
+          {{ element.fibreCategoryName }}
+        </td>
+      </ng-container>
 
-    <!-- fibre Column -->
-    <ng-container matColumnDef="fibre">
-      <th mat-header-cell *matHeaderCellDef>Fibre</th>
-      <td mat-cell *matCellDef="let element">{{ element.fibre }}</td>
-    </ng-container>
+      <!-- fibre Column -->
+      <ng-container matColumnDef="fibre">
+        <th mat-header-cell *matHeaderCellDef>Fibre</th>
+        <td mat-cell *matCellDef="let element">{{ element.fibreType }}</td>
+      </ng-container>
 
-    <!-- fibreShade Column -->
-    <ng-container matColumnDef="fibreShade">
-      <th mat-header-cell *matHeaderCellDef>Fibre Shade</th>
-      <td mat-cell *matCellDef="let element">{{ element.fibreShade }}</td>
-    </ng-container>
+      <!-- fibreShade Column -->
+      <ng-container matColumnDef="fibreShade">
+        <th mat-header-cell *matHeaderCellDef>Fibre Shade</th>
+        <td mat-cell *matCellDef="let element">{{ element.shadeName }}</td>
+      </ng-container>
 
-    <!-- lot Column -->
-    <ng-container matColumnDef="lot">
-      <th mat-header-cell *matHeaderCellDef>Lot</th>
-      <td mat-cell *matCellDef="let element">{{ element.lot }}</td>
-    </ng-container>
+      <!-- lot Column -->
+      <ng-container matColumnDef="lot">
+        <th mat-header-cell *matHeaderCellDef>Lot</th>
+        <td mat-cell *matCellDef="let element">{{ element.lot }}</td>
+      </ng-container>
 
-    <!-- stockQty Column -->
-    <ng-container matColumnDef="stockQty">
-      <th mat-header-cell *matHeaderCellDef>Stock Qty</th>
-      <td mat-cell *matCellDef="let element">{{ element.stockQty }}</td>
-    </ng-container>
+      <!-- stockQty Column -->
+      <ng-container matColumnDef="stockQty">
+        <th mat-header-cell *matHeaderCellDef>Stock Qty</th>
+        <td mat-cell *matCellDef="let element">{{ element.stock }}</td>
+      </ng-container>
 
-    <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-    <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
-    <tr *matNoDataRow>
-      <td class="no-rows" [attr.colspan]="displayedColumns.length">
-        No rows to display
-      </td>
-    </tr>
-  </table>
+      <!-- Checkbox Column -->
+      <ng-container matColumnDef="select">
+        <th mat-header-cell *matHeaderCellDef class="text-center">
+          <mat-checkbox
+            matTooltip="Select all"
+            [disabled]="dataSource.length ? null : true"
+            (change)="$event ? toggleAllRows() : null"
+            [checked]="selection.hasValue() && isAllSelected()"
+            [indeterminate]="selection.hasValue() && !isAllSelected()"
+          >
+          </mat-checkbox>
+        </th>
+        <td mat-cell *matCellDef="let row" class="text-center">
+          <mat-checkbox
+            (click)="$event.stopPropagation()"
+            (change)="$event ? selection.toggle(row) : null"
+            [checked]="selection.isSelected(row)"
+          >
+          </mat-checkbox>
+        </td>
+      </ng-container>
+
+      <tr mat-header-row *matHeaderRowDef="displayedColumns; sticky: true"></tr>
+      <tr
+        mat-row
+        class="row"
+        *matRowDef="let row; columns: displayedColumns"
+        (click)="selection.toggle(row)"
+      ></tr>
+      <tr *matNoDataRow>
+        <td class="no-rows" [attr.colspan]="displayedColumns.length">
+          No rows to display
+        </td>
+      </tr>
+    </table>
+  </div>
 </div>
 <div mat-dialog-actions class="footer">
   <button mat-raised-button (click)="submit()" color="primary">Select</button>
