--- a/src/app/components/production/mixing/fibre-stock/fibre-stock.component.scss
+++ b/src/app/components/production/mixing/fibre-stock/fibre-stock.component.scss
@@ -13,6 +13,24 @@
   margin-bottom: 24px;
 }
 
+.table-container {
+  position: relative;
+}
+
+.loader {
+  width: 100%;
+  height: 100%;
+  z-index: 10;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  background: rgba(0, 0, 0, 0.1);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
 .mat-mdc-header-row {
   background: rgb(225, 225, 225);
 }
@@ -20,4 +38,12 @@
 .no-rows {
   padding: 16px 0;
   text-align: center;
+}
+
+.row {
+  cursor: pointer;
+
+  &:hover {
+    background-color: whitesmoke;
+  }
 }
