--- a/src/app/components/production/mixing/mixing.component.html
+++ b/src/app/components/production/mixing/mixing.component.html
@@ -6,40 +6,71 @@
     </button>
   </div>
   <div class="prog-details-container">
-    <mat-card class="card w-50">
+    <mat-card class="card w-60">
       <mat-card-header>
         <mat-card-title>Program Details</mat-card-title>
       </mat-card-header>
       <mat-card-content>
         <div class="form-container">
           <div>
-            <label class="font-weight-bold">Prog No</label>
-            <div class="font-size-16 text-gray pt-4">_</div>
+            <label class="font-weight-bold">Program No</label>
+            <div class="font-size-16 text-gray pt-4">
+              <span *ngIf="programDetails?.programNo">{{
+                programDetails?.programNo
+              }}</span>
+              <span *ngIf="!programDetails?.programNo">_</span>
+            </div>
           </div>
           <div>
             <label class="font-weight-bold">Shade</label>
-            <div class="font-size-16 text-gray pt-4">_</div>
+            <div class="font-size-16 text-gray pt-4">
+              <span *ngIf="programDetails?.shadeName">{{
+                programDetails?.shadeName
+              }}</span>
+              <span *ngIf="!programDetails?.shadeName">_</span>
+            </div>
           </div>
           <div>
             <label class="font-weight-bold">Blend</label>
-            <div class="font-size-16 text-gray pt-4">_</div>
+            <div class="font-size-16 text-gray pt-4">
+              <span *ngIf="programDetails?.blendName">{{
+                programDetails?.blendName
+              }}</span>
+              <span *ngIf="!programDetails?.blendName">_</span>
+            </div>
           </div>
         </div>
+        <mat-form-field appearance="fill" class="w-40 mixing-date">
+          <mat-label>Mixing Date</mat-label>
+          <input
+            matInput
+            [matDatepicker]="picker"
+            [formControl]="mixingDate"
+            (dateChange)="appSharedService.formatDate($event, mixingDate)"
+          />
+          <mat-hint>DD/MM/YYYY</mat-hint>
+          <mat-datepicker-toggle
+            matIconSuffix
+            [for]="picker"
+          ></mat-datepicker-toggle>
+          <mat-datepicker #picker></mat-datepicker>
+          <mat-error>This field is required.</mat-error>
+        </mat-form-field>
       </mat-card-content>
     </mat-card>
-    <div class="w-50">
+    <div class="w-40">
       <table mat-table [dataSource]="yarnDetails" class="mat-elevation-z8">
         <ng-container matColumnDef="yarnCount">
-          <th mat-header-cell *matHeaderCellDef>Yarn Count</th>
+          <th mat-header-cell *matHeaderCellDef>Yarn Counts</th>
           <td mat-cell *matCellDef="let element">
-            {{ element.yarnCount }}
+            {{ element.counts }}
           </td>
           <td mat-footer-cell *matFooterCellDef></td>
         </ng-container>
 
         <ng-container matColumnDef="kgs">
           <th mat-header-cell *matHeaderCellDef>KGs</th>
-          <td mat-cell *matCellDef="let element">{{ element.kgs }}</td>
+          <td mat-cell *matCellDef="let element">{{ element.quantity }}</td>
         </ng-container>
 
         <ng-container matColumnDef="button">
@@ -74,21 +105,23 @@
       <!-- fibreCategory Column -->
       <ng-container matColumnDef="fibreCategory">
         <th mat-header-cell *matHeaderCellDef>Fibre Category</th>
-        <td mat-cell *matCellDef="let element">{{ element.fibreCategory }}</td>
+        <td mat-cell *matCellDef="let element">
+          {{ element.fibreCategoryName }}
+        </td>
         <td mat-footer-cell *matFooterCellDef></td>
       </ng-container>
 
       <!-- fibre Column -->
       <ng-container matColumnDef="fibre">
         <th mat-header-cell *matHeaderCellDef>Fibre</th>
-        <td mat-cell *matCellDef="let element">{{ element.fibre }}</td>
+        <td mat-cell *matCellDef="let element">{{ element.fibreType }}</td>
         <td mat-footer-cell *matFooterCellDef></td>
       </ng-container>
 
       <!-- fibreShade Column -->
       <ng-container matColumnDef="fibreShade">
         <th mat-header-cell *matHeaderCellDef>Fibre Shade</th>
-        <td mat-cell *matCellDef="let element">{{ element.fibreShade }}</td>
+        <td mat-cell *matCellDef="let element">{{ element.shadeName }}</td>
         <td mat-footer-cell *matFooterCellDef></td>
       </ng-container>
 
@@ -103,7 +136,7 @@
       <ng-container matColumnDef="stockQty">
         <th mat-header-cell *matHeaderCellDef class="text-right">Stock Qty</th>
         <td mat-cell *matCellDef="let element" class="text-right">
-          {{ element.stockQty }}
+          {{ element.stock }}
         </td>
         <td mat-footer-cell *matFooterCellDef></td>
       </ng-container>
@@ -129,22 +162,30 @@
         </td>
       </ng-container>
 
-      <!-- issuedQty Column -->
-      <ng-container matColumnDef="issuedQty">
-        <th mat-header-cell *matHeaderCellDef class="text-right">Issued Qty</th>
-        <td mat-cell *matCellDef="let element" class="w-15 text-right">
+      <!-- issueQty Column -->
+      <ng-container matColumnDef="issueQty">
+        <th mat-header-cell *matHeaderCellDef class="text-right">Issue Qty</th>
+        <td
+          mat-cell
+          *matCellDef="let element"
+          class="w-15 text-right input-container"
+        >
           <input
+            [ngClass]="{ 'border-error': checkIssueQty(element) }"
             #issuedQty
             type="number"
             class="cell-input w-70"
             (input)="
               appSharedService.restrictDecimal($event, 3);
-              element.issuedQty = issuedQty.value
+              element.issueQuantity = issuedQty.value
             "
           />
+          <p *ngIf="checkIssueQty(element)" class="error-alert">
+            Greater than Stock Qty
+          </p>
         </td>
         <td mat-footer-cell *matFooterCellDef class="text-right">
-          {{ getTotalIssuedQty() || 0 | number : "1.0-3" }}
+          {{ getTotalIssueQty() || 0 | number : "1.0-3" }}
         </td>
       </ng-container>
 
@@ -160,7 +201,11 @@
       </ng-container>
 
       <tr mat-header-row *matHeaderRowDef="mixingDisplayedColumns"></tr>
-      <tr mat-row *matRowDef="let row; columns: mixingDisplayedColumns"></tr>
+      <tr
+        class="mixing-row"
+        mat-row
+        *matRowDef="let row; columns: mixingDisplayedColumns"
+      ></tr>
       <tr *matNoDataRow>
         <td class="no-rows" [attr.colspan]="mixingDisplayedColumns.length">
           No rows to display
