--- a/src/styles.scss
+++ b/src/styles.scss
@@ -99,6 +99,16 @@ app-print-fibre-po {
 
 //padding
 
+.px-16 {
+  padding-right: 16px;
+  padding-left: 16px;
+}
+
+.py-10 {
+  padding-top: 10px;
+  padding-bottom: 10px;
+}
+
 .pt-24 {
   padding-top: 24px;
 }
