updated mixed blend

--- a/src/app/components/production/mixing/mixing.component.html
+++ b/src/app/components/production/mixing/mixing.component.html
@@ -96,11 +96,12 @@
       <mat-card>
         <div
           *ngIf="mixingDetails.length && mixedBlend"
-          class="font-weight-bold font-size-18 px-16 py-10"
+          class="font-weight-bold px-16 py-10"
         >
-          <span class="text-gray mr-8">Blend</span>-<span class="ml-8">{{
-            mixedBlend
-          }}</span>
+          <span class="text-gray font-size-14 mr-8">Mixed Blend</span>-<span
+            class="font-size-18 ml-8"
+            >{{ mixedBlend }}</span
+          >
         </div>
       </mat-card>
     </div>
