--- a/src/app/components/production/mixing/mixing.component.html
+++ b/src/app/components/production/mixing/mixing.component.html
@@ -212,6 +212,23 @@
         </td>
       </ng-container>
 
+      <!-- Action Column -->
+      <ng-container matColumnDef="action">
+        <th mat-header-cell *matHeaderCellDef class="text-right">Action</th>
+        <td mat-cell *matCellDef="let element" class="text-right">
+          <button
+            mat-icon-button
+            color="warn"
+            matTooltip="Remove"
+            aria-label="button with a delete icon"
+            (click)="removeStock(element)"
+          >
+            <mat-icon>delete</mat-icon>
+          </button>
+        </td>
+        <td mat-footer-cell *matFooterCellDef></td>
+      </ng-container>
+
       <tr mat-header-row *matHeaderRowDef="mixingDisplayedColumns"></tr>
       <tr
         class="mixing-row"
