update for new API changes

--- a/src/app/components/production/create-program/add-yarn/add-yarn.component.html
+++ b/src/app/components/production/create-program/add-yarn/add-yarn.component.html
@@ -12,7 +12,7 @@
     </mat-form-field>
     <mat-form-field appearance="fill">
       <mat-label>KGs</mat-label>
-      <input matInput formControlName="quantity" />
+      <input matInput formControlName="programQuantity" />
       <mat-error>This field is required.</mat-error>
     </mat-form-field>
   </form>
