--- a/src/app/components/production/create-program/create-program.component.html
+++ b/src/app/components/production/create-program/create-program.component.html
@@ -82,7 +82,9 @@
 
         <ng-container matColumnDef="quantity">
           <th mat-header-cell *matHeaderCellDef>KGs</th>
-          <td mat-cell *matCellDef="let element">{{ element.quantity }}</td>
+          <td mat-cell *matCellDef="let element">
+            {{ element.programQuantity }}
+          </td>
           <td mat-footer-cell *matFooterCellDef>{{ getTotalKgs() }}</td>
         </ng-container>
 
