Added productionEntry call

--- a/src/app/components/production/mixing/mixing.component.html
+++ b/src/app/components/production/mixing/mixing.component.html
@@ -90,7 +90,7 @@
       </table>
     </div>
   </div>
-  <div class="mt-24">
+  <div>
     <div class="fibre-stock-btn mb-16">
       <button mat-raised-button color="primary" (click)="fibreStock()">
         <mat-icon>playlist_add</mat-icon> Select Fibre Stock
