--- a/src/app/components/production/mixing/mixing.component.scss
+++ b/src/app/components/production/mixing/mixing.component.scss
@@ -21,6 +21,7 @@
 .form-container {
   padding: 32px 32px 24px;
   display: flex;
+  flex-wrap: wrap;
   gap: 32px;
   justify-content: space-between;
 }
@@ -31,7 +32,7 @@
 
 .prog-details-container {
   display: flex;
-  gap: 48px;
+  gap: 32px;
 }
 
 .mat-mdc-header-row {
