updated button name

--- a/src/app/components/production/entry/waste-entry/waste-entry.component.html
+++ b/src/app/components/production/entry/waste-entry/waste-entry.component.html
@@ -85,7 +85,7 @@
     <div class="w-60">
       <div class="button-container">
         <button mat-raised-button (click)="addEntry()" class="button">
-          <mat-icon>add_circle_outline</mat-icon>Add item
+          <mat-icon>add_circle_outline</mat-icon>Add Entry
         </button>
       </div>
       <table
