--- a/src/app/components/production/entry/production-entry/production-entry.component.html
+++ b/src/app/components/production/entry/production-entry/production-entry.component.html
@@ -119,7 +119,7 @@
     <div class="w-65">
       <div class="button-container" *ngIf="yarnDetails.length">
         <button mat-raised-button (click)="addEntry()" class="button">
-          <mat-icon>add_circle_outline</mat-icon>Add item
+          <mat-icon>add_circle_outline</mat-icon>Add Entry
         </button>
       </div>
       <table
