--- a/src/app/components/purchases/fibre/fibre-purchase-order/fibre-purchase-order.component.html
+++ b/src/app/components/purchases/fibre/fibre-purchase-order/fibre-purchase-order.component.html
@@ -6,7 +6,7 @@
     </mat-card-header>
     <mat-card-content>
       <form class="form-container" [formGroup]="form">
-        <div class="w-15 pt-8">
+        <div class="pt-8">
           <label for="poNo" class="font-weight-bold">PONo</label>
           <div id="poNo" class="po-no font-size-16 text-gray pt-4">
             {{ form.get("poNo")?.value ? form.get("poNo")?.value : "_" }}
@@ -28,7 +28,7 @@
           <mat-error>This field is required.</mat-error>
         </mat-form-field>
 
-        <mat-form-field appearance="fill" class="w-20">
+        <mat-form-field appearance="fill" class="w-25">
           <mat-label>PODate</mat-label>
           <input
             matInput
