--- a/src/app/components/tool-bar/tool-bar.component.html
+++ b/src/app/components/tool-bar/tool-bar.component.html
@@ -29,7 +29,7 @@
       id="sales"
       mat-button
       (click)="selectSection('sales')"
-      routerLink="/"
+      routerLink="/sales"
     >
       Sales
     </button>
