yarn-blend update

--- a/src/app/components/production/production-master/yarn-blend/yarn-blend.component.html
+++ b/src/app/components/production/production-master/yarn-blend/yarn-blend.component.html
@@ -11,7 +11,7 @@
   </div>
   <mat-accordion>
     <mat-card *ngIf="!blendList?.length">
-      <div class="no-party">No Blend to display!</div>
+      <div class="no-blend">No Blend to display!</div>
     </mat-card>
     <mat-expansion-panel
       *ngFor="let blend of blendList; let index = index"
