--- a/src/app/components/production/production-master/yarn-blend/yarn-blend.component.scss
+++ b/src/app/components/production/production-master/yarn-blend/yarn-blend.component.scss
@@ -24,3 +24,9 @@ h1 {
   padding: 16px 0;
   text-align: center;
 }
+
+.no-blend {
+  padding: 16px;
+  display: flex;
+  justify-content: center;
+}
